--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "error-null-handle",
   "version": "0.1.0",
   "description": "function programming approach for error and null handling",
-  "main": "./lib/index.js",
-  "module": "./es/index.js",
+  "main": "./dist/lib/index.js",
+  "module": "./dist/es/index.js",
   "typings": "es/index.d.ts",
   "scripts": {
     "build": "tsc -p ./tsconfig.es.json && tsc -p ./tsconfig.cjs.json"
