--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "function programming approach for error and null handling",
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
-  "typings": "es/index.d.ts",
+  "types": "./dist/es/index.d.ts",
   "scripts": {
     "build": "tsc -p ./tsconfig.es.json && tsc -p ./tsconfig.cjs.json"
   },
