--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "types": "./dist/es/index.d.ts",
+  "type": "module",
   "scripts": {
-    "build": "tsc -p ./tsconfig.es.json && tsc -p ./tsconfig.cjs.json"
+    "build": "tsc -p ./tsconfig.es.json && tsc -p ./tsconfig.cjs.json && rollup -c rollup.config.js",
+    "rollup:build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Immortal1206/error-null-handle"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/lib/index.js",
+      "import": "./dist/es/index.js"
+    }
   },
   "keywords": [
     "typescript",
@@ -20,6 +28,10 @@
   "author": "lucifer",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.5.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.2.2"
   },
   "files": [
