--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/es/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "rollup -c rollup.config.js"
+    "build": "rollup -c rollup.config.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,13 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "rollup": "^4.5.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.36.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "files": [
