--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "error-null-handle",
-  "version": "0.2.0",
-  "description": "function programming approach for error and null handling",
+  "version": "0.2.1",
+  "description": "functional programming approach for error and null handling",
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "types": "./dist/es/index.d.ts",
