update: remove `fromObject` update: use private property

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noEmit": false,
-    "target": "ESNext",
+    "target": "ES2021",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "lib": [
